# rythm

./: .gitignore  CRATE.md  Cargo.toml  NOTES.md  README.md  catalina.code-workspace  rythm.code-workspace
.github/: FUNDING.yml
.github/workflows/: cli.yml  library.yml
crates/catalina-bsp/: Cargo.toml  README.md
crates/catalina-bsp/src/: lib.rs
crates/catalina-bsp/src/drivers/: mod.rs
crates/catalina-bsp/src/modules/: mini.rs
crates/catalina-bsp/src/modules/mini/v0_2/: mod.rs
crates/catalina-engine/: Cargo.toml  README.md
crates/catalina-engine/examples/embedded/stm32l433/: Cargo.toml
crates/catalina-engine/examples/embedded/stm32l433/.cargo/: config.toml
crates/catalina-engine/examples/embedded/stm32l433/src/: main.rs
crates/catalina-engine/examples/std/play-sine/: Cargo.toml
crates/catalina-engine/examples/std/play-sine/src/: main.rs
crates/catalina-engine/examples/std/render-sine/: Cargo.toml
crates/catalina-engine/examples/std/render-sine/src/: main.rs
crates/catalina-engine/examples/std/sine-synth/: Cargo.toml
crates/catalina-engine/examples/std/sine-synth/src/: instrument.rs  main.rs
crates/catalina-engine/examples/std/terminal-sequencer/: Cargo.toml
crates/catalina-engine/examples/std/terminal-sequencer/src/: main.rs
crates/catalina-engine/src/audio/: mod.rs
crates/catalina-engine/src/audio/envelope/: adsr.rs
crates/catalina-engine/src/audio/frame/: LICENSE  mod.rs
crates/catalina-engine/src/audio/oscillator/: mod.rs  variable.rs
crates/catalina-engine/src/audio/sample/: conv.rs  mod.rs
crates/catalina-engine/src/audio/slice/: mod.rs
crates/catalina-engine/src/core/: mod.rs
crates/catalina-engine/src/instrument/: mod.rs
crates/catalina-engine/src/music/: helpers.rs  named_pitch.rs  note.rs  pitch.rs
crates/catalina-instruments/: Cargo.toml  README.md
crates/catalina-instruments/src/: lib.rs
crates/catalina-instruments/src/synths/: additive.rs
crates/catalina-instruments/src/synths/additive/: mod.rs  oscillator.rs  voice.rs
crates/engine/examples/std/play-wave-sine/: Cargo.toml  README.md
crates/engine/examples/std/play-wave-sine/src/: main.rs
crates/engine/examples/std/render-wave-sine/: Cargo.toml  README.md
crates/engine/examples/std/sine-synth/: Cargo.toml
crates/engine/examples/std/sine-synth/src/: main.rs
crates/engine/examples/std/terminal-sequencer/: Cargo.toml
crates/engine/examples/std/terminal-sequencer/src/: main.rs
crates/engine/src/: fmt.rs  lib.rs
crates/engine/src/audio/oscillator/: mod.rs
crates/engine/src/music/: mod.rs  note.rs  octave.rs  pitch.rs
crates/engine/src/sequence/: mod.rs  pattern.rs
engine/: Cargo.toml  README.md
engine/examples/sine-synth/src/: instrument.rs
engine/examples/std/render-wave-sine/src/: main.rs
engine/examples/std/sine-synth/src/: instrument.rs  main.rs
engine/src/: prelude.rs
engine/src/audio/: mod.rs
engine/src/audio/oscillator/: mod.rs  sine.rs
engine/src/core/: mod.rs
engine/src/instrument/: mod.rs
engine/src/theory/: named_pitch.rs  note.rs
examples/std/play-sine/: Cargo.toml  README.md
examples/std/play-sine/src/: main.rs
examples/std/render-sine/: .gitignore  Cargo.toml  README.md
examples/std/render-sine/src/: main.rs
examples/std/sine-synth/: Cargo.toml  README.md
examples/std/sine-synth/src/: instrument.rs  main.rs
examples/std/terminal-sequencer/: Cargo.toml
examples/std/terminal-sequencer/src/: main.rs
hardware/: .gitignore
hardware/boards/card/v0.1/: rythm_card_v0.1.kicad_pcb  rythm_card_v0.1.kicad_pro  rythm_card_v0.1.kicad_sch
hardware/boards/card/v0.1/rythm_card_v0.1/: rythm_card_v0.1.kicad_pro
hardware/boards/mini/v0.1/: Library.kicad_sym  rythm_mini_v0.1.kicad_dru  rythm_mini_v0.1.kicad_pcb  rythm_mini_v0.1.kicad_pro  rythm_mini_v0.1.kicad_sch  sym-lib-table
hardware/boards/mini/v0.1/Library.pretty/: RythmMini.kicad_mod  SAMTEC_FTSH-105-01-F-DV-P-TR.kicad_mod
hardware/boards/mini/v0.2/: mini_v0.2.kicad_dru  mini_v0.2.kicad_pcb  mini_v0.2.kicad_pro  mini_v0.2.kicad_sch  rythm_mini_v0.2.kicad_pcb  rythm_mini_v0.2.kicad_pro  rythm_mini_v0.2.kicad_sch  sym-lib-table
hardware/boards/mini/v0.2/production/: netlist.ipc
hardware/boards/mini/v0.3/: fp-lib-table  mini_v0.3.kicad_dru  mini_v0.3.kicad_pcb  mini_v0.3.kicad_sch
hardware/footprints/Rythm.pretty/: Mini-v0.2-Socket.kicad_mod  RythmMini-v0.1.kicad_mod
hardware/symbols/: Rythm.kicad_sym
src/: lib.rs
