[workspace]
members = [
    "crates/*",
    "crates/catalina-engine/examples/std/*",
    "crates/catalina-engine/examples/embedded/*",
]

[package]
name = "catalina"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Embedded Rust ecosystem for audio processing and music"
repository = "https://github.com/northernpaws/catalina"
readme = "CRATE.md"
keywords = ["audio", "music", "dsp"]
categories = [
    "command-line-utilities",
    "multimedia::audio",
    "no-std",
    "no-std::no-alloc",
    "embedded",
]

[lib]
name = "catalina"
path = "src/lib.rs"

[[bin]]
name = "catalina"
path = "src/bin/main.rs"

[dependencies]
# The core audio and synth engine.
catalina-engine = { path = "crates/catalina-engine", version = "0.1.0", optional = true }

# Basic insturments implementations for examples.
catalina-instruments = { path = "crates/catalina-instruments", version = "0.1.0", optional = true }

# Board support packages for modules, carriers and kits from the ecosystem.
catalina-bsp = { path = "crates/catalina-bsp", version = "0.1.0", optional = true }

# Dependencies used by the command line binary.
#
# We should eventually figure out how to break these
# out into their own crate so they don't pollute the
# library dependencies.
anstyle = "1.0"
clap = { version = "4.5.53", default-features = false, features = [
    "std",
    "color",
    "help",
    "usage",
    "unicode",
    "wrap_help",
    "cargo",
    "derive",
    "suggestions",
] }
color-eyre = { version = "0.6.5" }
owo-colors = "4.2.0"
env_logger = "0.11"
log = "0.4"

[features]
engine = ["dep:catalina-engine"]
instruments = ["dep:catalina-instruments"]
bsp = ["dep:catalina-bsp"]

# Generic common feature flags.
default = ["engine"]
std = ["catalina-engine/std", "catalina-instruments/std"]
alloc = ["catalina-engine/alloc", "catalina-instruments/alloc"]
defmt = ["catalina-engine/defmt"]
log = ["catalina-engine/log"]
serde = ["catalina-engine/serde"]

# Features derrived from the BSP support modules.
bsp-mini = ["bsp", "catalina-bsp/mini"]
bsp-mini-v0_2 = ["bsp", "catalina-bsp/mini-v0_2"]
