[package]
name = "catalina-bsp"
version = "0.1.0"
edition = "2024"
description = "Board support packages for Catalina native hardware components"
keywords = ["audio", "music", "dsp"]
repository = "https://github.com/northernpaws/catalina"
license = "MIT"

[dependencies]

[features]
# Enables BSP support for Mini modules.
#
# A version-specific feature below will be required,
# this flag just enables common crates for the Mini.
mini = []

# Enables the BSP for the Mini module, version 0.2.
mini-v0_2 = ["mini"]
