[package]
name = "catalina-engine"
version = "0.1.0"
edition = "2024"
description = "Audio and synth DSP framework for creating audio processing and music platforms on embedded platforms."
keywords = ["audio", "music", "dsp"]
repository = "https://github.com/northernpaws/catalina"
license = "MIT"

[dependencies]

defmt = { version = "1.0.1", optional = true }
heapless = "0.9.2"
pretty_assertions = "1.4.1"

# (De)serialization
serde = { version = "1", features = ["derive"], optional = true }

float_eq = "1.0.1"
paste = "1.0.15"

# Intrinsics without needing the nightly core_intrinsics feature.
libm = "0.2.15"

[features]
default = ["serde"]

std = ["alloc"]
alloc = []

serde = ["dep:serde"]
defmt = ["dep:defmt"]
log = []

[package.metadata.docs.rs]
all-features = true
