[package]
name = "stm32l433"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.4.0", features = [
    "defmt",
    "stm32l433rc",
    "memory-x",
    "time-driver-tim4",
    "exti",
    "chrono",
] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }
